* Added CMenu
* Added CFile   


Changes in detail
-----------------
- Added CMenu
- Added CString
- Added CFile
- Added BSTR2A
- Added BSTR2T
- Added BSTR2W
- Added CDocker::GetActiveDocker
- Added CFrame::IsMDIFrame
- Added CWinApp::GetAccelerators
- Added CWinException::GetError
- Added CWnd::ChildWindowFromPoint
- Added CWnd::WindowFromPoint
- Modified LoadString 				now returns CString
- Modified CWnd::GetAncestor		now accepts a gaFlags parameter
- Removed CLoadString
- Removed GetWindowType for all CWnd classes
- Renamed CDocker::GetDockTopLevel to CDocker::GetTopmostDocker


Incompatibilities with previous versions
----------------------------------------
* The Win32++ now uses Run Time Type Information (RTTI). Older Microsoft
  compilers (Visual Studio 2003 and earlier) will need to have the option to
  support RTTI enabled.
* LoadString now returns a CString.


Version 7.1
===========
New Features and Enhancements
-----------------------------
* Added support for Task Dialogs
* Added the following set of gdi classes: CBitmap, CBrush, CFont, CPalette, 
   CPen and CRgn. These work in cooperation with the existing CDC class.
* Added a set of new Text conversion functions based on classes.
   The complete set of functions are:
	A2BSTR		ANSI  to BSTR
	A2OLE		ANSI  to OLE
	A2T			ANSI  to TCHAR
	A2W			ANSI  to WCHAR
	OLE2A		OLE   to ANSI
	OLE2T		OLE   to TCHAR
	OLE2W		OLE   to WCHAR
	T2A			TCHAR to ANSI
	T2BSTR		TCHAR to BSTR
	T2OLE       TCHAR to OLE
	T2W			TCHAR to Wide
	W2A			WCHAR to ANSI
	W2BSTR		WCHAR to BSTR
	W2OLE		WCHAR to OLE
	W2T			WCHAR to TCHAR
   Refer to the help documentation for instructions on using these functions.
* Added CLoadString (and LoadString) to return a string resource. 
* OnEraseBkgnd is now called automatically when a CWnd's background needs
   erasing. Return TRUE to prevent default erasure.
* Scribble Tutorial now demonstrates the use of command line arguments
* Enhanced CResizer.